updated list of references

--- a/packages.bib
+++ b/packages.bib
@@ -33,7 +33,6 @@
     volume = {11},
     number = {10},
     pages = {1--17},
-    url = {http://www.jstatsoft.org/v11/i10/},
 }
 
 @Article{lmtest_2002,
@@ -146,4 +145,18 @@ Theory Group (Formerly: E1071), TU Wien},
     year = {2017},
     note = {R package version 0.6.1},
     url = {https://CRAN.R-project.org/package=shinydashboard},
+}
+
+@incollection{ball_2009-qi,
+	booktitle = {Spatial conservation prioritization. Quantitative methods \& computational tools},
+	title = {Marxan and relatives: Software for spatial conservation prioritization},
+	author = {Ball, Ian R and Possingham, Hugh P and Watts, Matthew E},
+	pages = {185-195},
+	publisher = {Oxford University Press},
+	url = {https://espace.library.uq.edu.au/view/UQ:200259},
+	year = {2009},
+	urldate = {2017-12-02},
+	isbn = {9780199547760},
+	address = {United Kingdom},
+	f1000-projects = {TURFeffect},
 }
