--- a/Manuscript.Rmd
+++ b/Manuscript.Rmd
@@ -89,13 +89,15 @@ suppressPackageStartupMessages({
 
 Unsustainable fishing practices threaten biodiversity, conservation, economic and social outcomes [@pauly_2005-qV; @halpern_2008-dK]. Marine Protected Areas (MPAs; and marine reserves, in which all extractive efforts are prohibited) are frequently proposed to aid in the recovery of fish and invertebrate stocks [@lester_2008-F_; @lester_2009-Ks; @sala_2016-PV; @hastings_2017-sm] by limiting or restricting fishing effort and gears.
 
-Empirical evidence shows that MPAs increase biomass [@aburtooropeza_2011-ya; @lester_2009-Ks], enhance resilience to climatic impacts [@micheli_2012-EU; @roberts_2017-J9], and preserve genetic diversity [@munguavega_2015-yg]. Compared to MPAs that grant partial protection, marine reserves have higher levels of biomass, density, richness, and larger organisms [@lester_2008-F_; @edgar_2014-UO; @giakoumi_2017-V2; @sala_2017-69]. However, these effects are often measured as biological changes within the reserves through time, and many lack a control site for comparison [@betti_2017-lq]. This approach does not account for other factors (*e.g.* system-level changes in productivity ; @szuwalski_2017-jc) for which one must control [@davies_2017-ml] in order to causally attribute a biological change to the reserve. Other studies have used a control--impact comparison approach that uses control sites but does not address temporal variability [@guidetti_2014-8Z; @friedlander_2017-oI; @lester_2009-Ks; @aburtooropeza_2011-ya; @rodriguez_2017-PD]. A smaller fraction of studies have used a before--after--control--impact (*i.e.* BACI) design comparing reserves to control sites before and after implementation [@moland_2013-VP; @soykan_2015-nu; @lester_2009-Ks], which allows the use of causal inference techniques that estimate the effect of the reserve. But even when proper causal inference can be drawn, results are often different across reserves. Effects of reserves on ecological and economic outcomes are highly heterogeneous, and often depend on the specific ecological, economic, and social context.
+Empirical evidence shows that MPAs increase biomass [@aburtooropeza_2011-ya; @lester_2009-Ks], enhance resilience to climatic impacts [@micheli_2012-EU; @roberts_2017-J9], and preserve genetic diversity [@munguavega_2015-yg]. Compared to MPAs that grant partial protection, marine reserves have higher levels of biomass, density, richness, and larger organisms [@lester_2008-F_; @edgar_2014-UO; @giakoumi_2017-V2; @sala_2017-69]. However, these effects are often measured as biological changes within the reserves through time, and many lack a control site for comparison [@betti_2017-lq]. This approach does not account for other factors (*e.g.* system-level changes in productivity caused by predatory release @szuwalski_2017-jc; or favorable environmental conditions @chavez_2003-_m) for which one must control [@davies_2017-ml] in order to causally attribute a biological change to the reserve. Other studies have used a control--impact comparison approach that uses control sites but does not address temporal variability [@guidetti_2014-8Z; @friedlander_2017-oI; @lester_2009-Ks; @aburtooropeza_2011-ya; @rodriguez_2017-PD].
+
+A smaller fraction of studies have used a before--after--control--impact (*i.e.* BACI) design comparing reserves to control sites before and after implementation [@moland_2013-VP; @soykan_2015-nu; @lester_2009-Ks], which allows the use of causal inference techniques that estimate the effect of the reserve. For example, in ref [@moland_2013-VP] authors use a BACI design and observe increases in lobster catches --a proxy for abundances-- after the implementation of the reserves for protected and control sites. However, the temporal changes in the reserve were greater than in the control site, suggesting a positive effect off the reserve on lobster catches. But even when proper causal inference can be drawn, results are often different across reserves. Effects of reserves on ecological and economic outcomes are highly heterogeneous, and often depend on the specific ecological, economic, and social context.
 
 Standardization of marine reserve evaluation is not new. The IUCN framework “How is your MPA doing?” [@pomeroy_2005-Py; @pomeroy_2004-23] provides a comprehensive list of biological, socioeconomic, and governance indicators, and insights into how these may be measured or collected. But this framework stops short of analysis, and provides a user with little guidance about establishing causal inference about the reserve. Recent work [@mascia_2017-m_] integrates these three dimensions via the Social Ecological Systems Framework [@ostrom_2009-hg; @basurto_2013-oq] and suggests the use of causal inference techniques to provide a measure of the effect of conservation interventions. However, neither of these approaches provide a user-friendly tool that ensures replicability and scalability of the analysis, particularly when used by the fishers and decision makers themselves.
 
 An increasingly popular way to make science accessible, reproducible, scalable, and replicable is through Open Science and the development of open--access tools [@lowndes_2017-xh]. The Ocean Health Index [@halpern_2012-k9; @halpern_2017-Zi], for example, successfully standardized a way to measure the health and benefits of the oceans. This approach has been implemented at a global scale, but also at country-level [@selig_2015-F9], and regionally [@halpern_2014-lQ; @elfes_2014-RC]. Open access tools are not limited to conservation, and have also been developed to evaluate fishery performance [@anderson_2015-ND; @dowling_2016-pO], design territorial use rights for fisheries [TURFs; @oyanedel_2017-TO], and improve decision making in the hydro power industry [@vilela_2017-Zo].
 
-The purpose of this paper is to describe a user--friendly tool, called “MAREA”, to rigorously systematize the evaluation of marine reserve effectiveness in terms of fisheries and marine conservation. The tool is in the form of an open--source application that uses state--of--the--art methods from program evaluation to compare a reserve to control sites along a number of ecological, economic, and governance dimensions. We first provide a list of commonly stated management objectives and match them to appropriate indicators. We then develop a simple approach to analyzing these indicators building on causal inference techniques [@moland_2013-VP], which help us understand the effect of management interventions [@burgess_2016-HN; @mascia_2017-m_]. To implement the analytical approach, we introduce the Marine Reserve Evaluation Application (MAREA), an open source, web–based tool that automates the framework described in this paper and enables its broader use. Finally, we present a case study on the evaluation of a marine reserve established by the fishers of Isla Natividad (Mexico) in 2006, to demonstrate the potential of MAREA.
+The purpose of this paper is to describe a user--friendly tool, called “MAREA”, to rigorously systematize the evaluation of marine reserve effectiveness in terms of fisheries and marine conservation. The tool is in the form of an open--source application that uses state--of--the--art methods from program evaluation to compare a reserve to control sites along a number of biological, economic, and governance dimensions. We first provide a list of commonly stated management objectives and match them to appropriate indicators. We then develop a simple approach to analyzing these indicators building on causal inference techniques [@moland_2013-VP], which help us understand the effect of management interventions [@burgess_2016-HN; @mascia_2017-m_]. To implement the analytical approach, we introduce the Marine Reserve Evaluation Application (MAREA), an open source, web–based tool that automates the framework described in this paper and enables its broader use. Finally, we present a case study on the evaluation of a marine reserve established by the fishers of Isla Natividad (Mexico) in 2006, to demonstrate the potential of MAREA.
 
 # Materials and methods
 
@@ -109,7 +111,7 @@ fig1 <- knitr::include_graphics("./Figures/flowchart.gif", dpi = 2380)
 
 ## Marine Reserve objectives and indicators
 
-Throughout this study, we will refer to the stated goals for which a marine reserve was designed as “objectives.” This work was motivated by the case of Mexico, where 39 reserves have been implemented over the past five years to achieve objectives such as increasing productivity in nearby waters or recovery of overexploited species; most of these reserves have never been formally evaluated for effectiveness at meeting those objectives. Thus, our focus was on identifying common objectives of marine reserves in Mexico. However, a literature review and discussions with marine reserve researchers suggest that the objectives driving Mexican marine reserve implementation are similar to those in the rest of the world. Thus, we group these objectives into seven major categories, which may be applied to marine reserves worldwide. Any given reserve may have been implemented to meet one or more of these. The list includes objectives stated in legislation [@nom049sagpesc_2014-V6; @lgeepa_2017-jL] and official documents such as the Technical Justification Studies (*Estudios Técnicos Justificativos*), agreements, and decrees associated to these areas:
+Throughout this study, we will refer to the stated goals for which a marine reserve was designed as “objectives.” This work was motivated by the case of Mexico, where 39 reserves have been implemented over the past five years to achieve objectives such as increasing productivity in nearby waters or recovery of overexploited species; most of these reserves have never been formally evaluated for effectiveness at meeting those objectives. Thus, our focus was on identifying common objectives of marine reserves in Mexico. However, a literature review and discussions with marine reserve researchers suggest that the objectives driving Mexican marine reserve implementation are similar to those in the rest of the world. Thus, we group these objectives into seven major categories that may be applied to marine reserves worldwide. Any given reserve may have been implemented to meet one or more of these. The list includes objectives stated in legislation [@nom049sagpesc_2014-V6; @lgeepa_2017-jL] and official documents such as the Technical Justification Studies (*Estudios Técnicos Justificativos*), agreements, and decrees associated to these areas:
 
 1.	Avoid overexploitation
 2.	Conserve species under a special protection regime
@@ -121,7 +123,7 @@ Throughout this study, we will refer to the stated goals for which a marine rese
 
 Based on these seven objectives, we determined a set of associated indicators to evaluate reserve effectiveness. These indicators are specific variables on which data could be collected, and analyzed, to ultimately determine whether the corresponding objective was causally being achieved by the marine reserve. The list of indicators was compiled through a review of scientific literature in which we identified indicators that were used to measure similar objectives[@lester_2017-nh; @sala_2017-69; @chirico_2017-Rz; @edgar_2014-UO; @rodriguez_2017-PD; @rossetto_2015-V0; @betti_2017-lq; @sala_2016-PV; @woodcock_2017-Wm; @friedlander_2017-oI; @moland_2013-VP; @aburtooropeza_2011-ya; @guidetti_2014-8Z; @lester_2008-F_; @lester_2009-Ks; @pomeroy_2005-Py; @pomeroy_2004-23]. A first filter eliminated indicators for which baseline data do not typically exist in Mexico. The preliminary list of indicators was reviewed at a workshop with participation of members from Mexican fishery management agencies and non-government organizations. Later, these were presented to fishers from the Ensenada Fishing Cooperative (*S.C.P.P. Ensenada*), in El Rosario, Baja California, who provided input. Our final list of indicators includes those identified in review works [@lester_2009-Ks; @woodcock_2017-Wm].
 
-Indicators are divided into three main categories: biological, socioeconomic, and governance (Table 1). The nine biological indicators focus on fish and invertebrate communities that are evaluated using underwater ecological surveys performed inside and outside the reserve (see Data and Analysis section for specific sampling design and methodologies). Five socioeconomic indicators reflect the performance of the fishery in terms of landings, income from landings, and availability of alternative livelihoods. Fifteen governance indicators describe the governance structures under which the community operates (*e.g.*, access rights to the fishery, number of fishers, legal recognition of the reserve). Some indicators are quantitative and require a numerical entry (*e.g.* Fish biomass) while others are qualitative and rely on a descriptive entry (*e.g.* Reasoning for reserve location). Many of them specifically measure an outcome of the reserve, though some are designed to further the understanding of the mechanisms driving a reserve’s performance. In that sense, most biological and socioeconomic indicators are outcome variables. On the other hand, governance indicators are viewed as possible explanatory variables of reserve performance. Whenever an indicator is applied to “Target species”, it means that the indicator can be used for all species (*e.g.* Fish Biomass) and/or for individual species that are either the conservation target  of the reserve or are of particular economic or ecological interest (*e.g.* Grouper Biomass). Finally, indicators B3 and B4 are different in that B3 look only at the density of organisms above size at first maturity (related to reproductive potential), while B4 measures the density of all fish or of a target species. Each indicator targets different plausible desired outcomes, like increased reproductive potential (*i.e.* B3; @carter_2017-Uf) or having more fish -regardless of their size- to atract tourism (*i.e.* B4). Table 1 presents the proposed indicators, and Table 2 shows how objectives are matched with biological and socioeconomic indicators. Governance indicators are excluded from Table 2, as we suggest that all of them should be used in an evaluation, regardless of the objectives.
+Indicators are divided into three main categories: biological, socioeconomic, and governance (Table 1). The nine biological indicators focus on fish and invertebrate communities that are evaluated using underwater ecological surveys performed inside and outside the reserve (see Data and Analysis section for specific sampling design and methodologies). Five socioeconomic indicators reflect the performance of the fishery in terms of landings, income from landings, and availability of alternative livelihoods. Fifteen governance indicators describe the governance structures under which the community operates (*e.g.*, access rights to the fishery, number of fishers, legal recognition of the reserve). Most biological and socioeconomic indicators are quantitative and require a numerical entry (*e.g.* Fish biomass) while all governance indicators, one biological indicator, and one socioeconomic indicator are qualitative and rely on a descriptive entry (*e.g.* Reasoning for reserve location). Many of them specifically measure an outcome of the reserve, though some are designed to further the understanding of the mechanisms driving a reserve’s performance. In that sense, most biological and socioeconomic indicators are outcome variables. On the other hand, governance indicators are viewed as possible explanatory variables of reserve performance. Whenever an indicator is applied to “Target species”, it means that the indicator can be used for all species (*e.g.* Fish Biomass) and/or for individual species that are either the conservation target  of the reserve or are of particular economic or ecological interest (*e.g.* Grouper Biomass). Finally, indicators B3 and B4 are different in that B3 only looks at the density of organisms above size at first maturity (related to reproductive potential), while B4 measures the density of all fish or of a target species. Each indicator targets different plausible desired outcomes, like increased reproductive potential (*i.e.* B3; @carter_2017-Uf) or having more fish -regardless of their size- to attract tourism (*i.e.* B4). Table 1 presents the proposed indicators, and Table 2 shows how objectives are matched with biological and socioeconomic indicators. Governance indicators are excluded from Table 2, as governance indicators are important to consider for every objective.
 
 ```{r, results = "asis"}
 read.csv("./Tables/Table_indicators.csv") %>% 
@@ -172,7 +174,7 @@ While biological and some economic data are regularly collected, governance data
 
 We developed MAREAin R version 3.4.2 and R Studio 1.1.383 [@rcore_2017] using the Shiny package [@shiny_2017], to build an interactive web application hosted on an open server; the MAREA app can be accessed at [turfeffect.shinyapps.io/marea](turfeffect.shinyapps.io/marea/). While the original version was developed in Spanish because it was aimed for Mexico and other Latin-American countries, all of its content can be translated by a translation widget available within the app.
 
-MAREA is designed as a 6--step process, divided in tabs that appear upon launching the app. The first tab introduces the app and summarizes the evaluation process. Then, the user selects management objectives, which MAREA automatically matches to appropriate indicators, based on Table 2. Users can also select and un-select indicators based on their interests and data availability by "clicking" on the check-boxes in MAREA. The user can then load data on one or more reserves, using standard \*.csv text files; sample datasets are provided within MAREA. Once data have been loaded, MAREA identifies all reserves in the data, and lets the user select the reserve to be evaluated. At this point, the user can also specify the year of implementation of the reserve, reserve dimensions, and indicate target species that are of particular management interest. MAREA provides the user with a section to confirm that all the decisions made leading up to that point are correct. Once the user has confirmed all input data, objectives, and other information, MAREA performs the formal program evaluation analyses discussed above. For a typical data set, the automated analysis step takes less than one second. Finally, the user is taken to the results tab where all results are presented in a simple format. The user can also download a more comprehensive technical report produced in \*.pdf  format.
+MAREA is designed as a 6--step process, divided in tabs that appear upon launching the app. The first tab introduces the app and summarizes the evaluation process. Then, the user selects management objectives, which MAREA automatically matches to appropriate indicators, based on Table 2. Users can also select and deselect indicators based on their interests and data availability by "clicking" on the check-boxes in MAREA. The user can then load data on one or more reserves, using standard \*.csv text files; sample datasets are provided within MAREA. Once data have been loaded, MAREA identifies all reserves in the data, and lets the user select the reserve to be evaluated. At this point, the user can also specify the year of implementation of the reserve, reserve dimensions, and indicate target species that are of particular management interest. MAREA provides the user with a section to confirm that all the decisions made leading up to that point are correct. Once the user has confirmed all input data, objectives, and other information, MAREA performs the formal program evaluation analyses discussed above. For a typical data set, the automated analysis step takes less than one second. Finally, the user is taken to the results tab where all results are presented in a simple format. The user can also download a more comprehensive technical report produced in \*.pdf  format.
 
 The first output is a color–coded scorecard intended to provide a general overview of the effectiveness of the reserve. The scorecard provides a global score for the reserve, a general score for each category of indicators, and an individual score for each indicator. The global and category–level scores are determined by the percentage of positive indicators, overall and for each category, respectively. For numeric biological indicators (all but B5), the color is defined by the sign of the interaction term coefficient ($\beta_2$) in eq. 1. For socioeconomic indicators, colors are assigned based on the direction of the slope ($\beta_1$) in eq. 3. Red, yellow, and green are used for $\beta_i<0$, $\beta_i = 0$, and $\beta_i>0$, respectively. The intensity of the color is defined by the significance of the coefficient, testing the null hypothesis of no change (*i.e.* $H_0: \beta_i = 0$) with a Student’s t-test. Cutoff values are $p < 0.05$ and $p < 0.1$. Thus, even in a case where $\beta_i > 0$, if the coefficient is not significant by standard measures (*i.e. * $p>0.1$), the indicator will be assigned a yellow color. A legend (Fig. 2) is provided within the scorecard to aid in the interpretation of these results. Governance indicators are represented simply by red or green. The color is defined based on what literature shows to be a negative (red) or positive (green) factor for a reserve (S3 Table). For example, if the perceived degree of illegal fishing is high, this indicator will be assigned a red color. However, due to the nature of some governance indicators, which require the user to provide a narrative, only some indicators are presented in the scorecard (although all are included in the technical report).
 
@@ -275,24 +277,26 @@ pen_map <- tm_shape(W, bbox = bb(xlim = c(-118.36648, -109.41321),
   tm_borders(col = "black", lwd = 2) +
   tm_shape(labels1) +
   tm_text("Label") +
-  tm_scale_bar(position = c("left", "bottom"))
+  tm_scale_bar(position = c("left", "bottom")) +
+  tm_grid(n.x = 5, n.y = 5)
 
 study_area <- tm_shape(baja2, bbox = bb(xlim = c(-115.22, -115.14), ylim = c(27.85, 27.90))) +
   tm_polygons() +
   tm_shape(reserves) +
   tm_polygons(border.col = "black", col = "red", border.lwd = 0) +
   tm_shape(controls) +
-  tm_symbols(shape = 22, size = 4, border.col = "black", col = "blue", border.lwd = 1) +
+  tm_symbols(shape = 22, size = 4, border.col = "black", col = "steelblue1", border.lwd = 1) +
   tm_text("Label") +
   tm_shape(labels2) +
   tm_text("Label") +
   tm_compass(position = c("left", "bottom")) +
-  tm_scale_bar(position = c("left", "bottom"))
+  tm_scale_bar(position = c("left", "bottom")) +
+  tm_grid(n.x = 4, n.y = 4)
 
 # tmap_arrange(pen_map, study_area, outer.margins = 0.005, ncol = 2)
 ```
 
-In 2006, the Isla Natividad community implemented two community--based marine reserves within their TURF [@afflerbach_2014-HP; @lester_2017-nh; @micheli_2012-EU] after establishing a baseline for the soon--to--be reserves and control sites. Evidence suggest that these reserves have been effective at enhancing resilience to climate variations [@micheli_2012-EU] and preserving genetic diversity of high value commercial species such as abalone [@munguavega_2015-yg]. These ecological benefits have been translated into economic benefits, enhancing population persistence and bolstering abalone fisheries [@rossetto_2015-V0]. For the purpose of this evaluation, we focused on the “La Plana / Las Cuevas” marine reserve, located at the southern end of the island (Fig. 3) and its corresponding control site “La Dulce / Babencho”.
+In 2006, the Isla Natividad community established a biological baseline following the data collection protocol described in this study. The community then implemented two community--based marine reserves within their TURF [@afflerbach_2014-HP; @lester_2017-nh; @micheli_2012-EU] after establishing a baseline for the soon--to--be reserves and control sites. Evidence suggest that these reserves have been effective at enhancing resilience to climate variations [@micheli_2012-EU] and preserving genetic diversity of high value commercial species such as abalone [@munguavega_2015-yg]. These ecological benefits have been translated into economic benefits, enhancing population persistence and bolstering abalone fisheries [@rossetto_2015-V0]. For the purpose of this evaluation, we focused on the “La Plana / Las Cuevas” marine reserve, located at the southern end of the island (Fig. 3) and its corresponding control site “La Dulce / Babencho”.
 
 The objective of this reserve was to recover species of economic interest -—which were overexploited-- and to enhance fishery production in nearby waters. Fishers were also interested in preserving biological diversity and the ecosystem. Thus, objectives 4–-7 were selected. Using Table 2 to match these objectives with appropriate management indicators, we selected all biological, socioeconomic, and governance indicators included as options in the framework.
 
@@ -644,9 +648,9 @@ As for the governance information, it is difficult to establish causal links bet
 
 By making results straightforward to interpret, MAREA may also assist in communication with a broader stakeholder community. While stakeholder involvement in the design and implementation phases of marine reserves is important, that may not be sufficient for ensuring long--run buy--in or success. The scorecard is easily understandable by experts and non--experts, and can be used as an effective tool for communicating the results of annual evaluations. Additionally, the technical report can serve as a tool for managers and scientists to rapidly produce and communicate information at a more technical level.
 
-We recognize that the seven objectives and 29 indicators used by MAREA might not fully describe a reserve. In order to ensure the applicability of the tool to reserves in other countries, further testing in other regions should take place. However, the proposed objectives and indicators provide a starting point to perform the evaluation, to which managers and users can add other indicators (*e.g.* larval dispersal or connectivity) that are relevant to their reserve. Furthermore, MAREA’s value is that it provides a free, simple, and replicable way to perform rigorous impact analysis. The tool can easily be used by fishers, CSO members, and managers in government agencies, providing transparency of the analysis and results. In addition, it can empower and enable local managers and fishers to respond to local change and adapt by allowing direct and easy access to the information.
+We recognize that the seven objectives and 29 indicators used by MAREA might not fully describe a reserve in countries other than Mexico. In order to ensure the applicability of the tool to reserves in other countries, further testing in other regions should take place. However, the proposed objectives and indicators provide a starting point to perform the evaluation, to which managers and users can add other indicators (*e.g.* larval dispersal or connectivity) that are relevant to their reserve. Furthermore, MAREA’s value is that it provides a free, simple, and replicable way to perform rigorous impact analysis. The tool can easily be used by fishers, CSO members, and managers in government agencies, providing transparency of the analysis and results. In addition, it can empower and enable local managers and fishers to respond to local change and adapt by allowing direct and easy access to the information.
 
-An evident limitation of MAREA is its dependence on data obtained through a BACI design, and the amount of samples needed to estimate coefficients in Eqn. 1. It is not uncommon for control sites or baselines that describe the biological state of the area before the management intervention to be abscent. Propperly designing marine reserves by identifying control sites and establishing a baseline before the implementation of the reserve is enough to overcome this issue; reserves for which there is no control site and baseline can not be evaluated with MAREA. On the second case, typical underwater surveys require that at least 12 - 16 transects are performed on each site (*i.e.* reserve and control) each year. This provides with at least 48 samples (12 samples per site, per year), enough to avoid overfitting Eqn 1. On either case, these problems can be easily avoided by accounting for data requirements in the eventual evaluation, an important phase during the design process.
+An evident limitation of MAREA is its dependence on data obtained through a BACI design, and the amount of samples needed to estimate coefficients in Eqn. 1. It is not uncommon for control sites or baselines to be absent. Properly designing marine reserves by identifying control sites and establishing a baseline before the implementation of the reserve is enough to overcome this issue; reserves for which there is no control site and baseline cannot be evaluated with MAREA. Typical underwater surveys require that at least 12 - 16 transects are performed on each site (*i.e.* reserve and control) each year. This provides with at least 48 samples (12 samples per site, per year), enough to avoid overfitting Eqn 1. However, these problems can be easily avoided during the design and implementation phases by anticipating what data will be needed in the eventual evaluation.
 
 To the best of our knowledge, MAREA is the first tool designed to evaluate marine reserves. Previous work [@pomeroy_2005-Py; @mascia_2017-m_] addressed MPA evaluation and provided the foundation for our contribution. However, these did not intended to create user--friendly tools to aid in the evaluation. As with other conservation management tools, development of tools that automatize complex calculations can have an important impact in management [@ball_2009-qi]. The use of open data science enables the creation of open-access tools that can address techincal gaps and inprove management [@lowndes_2017-xh].
 
@@ -656,7 +660,7 @@ The first release of MAREA is now available, and it will continue to be develope
 
 # Acknowledgements
 
-We thank Olivier Deschenes and Andrew Plantinga, who provided valuable input to design the model that evaluates the biological indicators. Special thanks to the fishers from Isla Natividad, who gathered the data used in this study, and the fishers from El Rosario, who helped us validate our survey and framework, and to Arturo Hernández and Alfonso Romero who provided help with the logistics. Finally, we thank the Editor for a professional handling, and two anonymous reviewers for their suggestions, which significantly improved the quality of this paper.
+We thank Olivier Deschenes and Andrew Plantinga, who provided valuable input to design the model that evaluates the biological indicators. Special thanks to the fishers from Isla Natividad, who gathered the data used in this study, and the fishers from El Rosario, who helped us validate our survey and framework, and to Arturo Hernández and Alfonso Romero who provided help with the logistics. Finally, we thank the editor and two anonymous reviewers for their suggestions, which significantly improved the quality of this paper.
 
 \clearpage
 
