--- a/packages.bib
+++ b/packages.bib
@@ -160,3 +160,21 @@ Theory Group (Formerly: E1071), TU Wien},
 	address = {United Kingdom},
 	f1000-projects = {TURFeffect},
 }
+
+@article{chavez_2003-_m,
+title = {From anchovies to sardines and back: multidecadal change in the Pacific Ocean.},
+author = {Chavez, Francisco P and Ryan, John and Lluch-Cota, Salvador E and Niquen C, Miguel},
+pages = {217-221},
+url = {http://dx.doi.org/10.1126/science.1075880},
+year = {2003},
+month = {jan},
+day = {10},
+urldate = {2017-12-08},
+journal = {Science},
+volume = {299},
+number = {5604},
+doi = {10.1126/science.1075880},
+pmid = {12522241},
+f1000-projects = {TURFeffect},
+abstract = {In the Pacific Ocean, air and ocean temperatures, atmospheric carbon dioxide, landings of anchovies and sardines, and the productivity of coastal and open ocean ecosystems have varied over periods of about 50 years. In the mid-1970s, the Pacific changed from a cool "anchovy regime" to a warm "sardine regime." A shift back to an anchovy regime occurred in the middle to late 1990s. These large-scale, naturally occurring variations must be taken into account when considering human-induced climate change and the management of ocean living resources.}
+}
